src/objects/Integracion_Movimiento_CIA__mdt.object
<CustomObject>
    <description>Tabla de configuración con Tipo de Movimiento, Código de Modificación y compañía para  envío de ficheros a sistemas externos.</description>
    <fields>
        <fullName>Accion__c</fullName>
        <description>Código de acción de movimiento Homeserve</description>
        <label>Accion</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codigo_de_Modificacion__c</fullName>
        <defaultValue>&apos;00&apos;</defaultValue>
        <label>Codigo de Modificacion</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codigo_de_Movimiento__c</fullName>
        <label>Codigo de Movimiento</label>
        <length>1</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identificador_CIA__c</fullName>
        <label>Identificador CIA</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Integracion: Movimiento CIA</label>
    <listViews>
        <fullName>Completo</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>Accion__c</columns>
        <columns>Codigo_de_Movimiento__c</columns>
        <columns>Codigo_de_Modificacion__c</columns>
        <columns>Identificador_CIA__c</columns>
        <filterScope>Everything</filterScope>
        <label>Completo</label>
        <language>es</language>
    </listViews>
    <pluralLabel>Integracion: Movimientos CIA</pluralLabel>
</CustomObject>